--- a/configuration.properties
+++ b/configuration.properties
@@ -4,6 +4,7 @@ browser = chrome
 toUrl = https://www.testotomasyonu.com
 zeroUrl = http://zero.webappsecurity.com/
 faceUrl = https://www.facebook.com
+saucedemoUrl = https://www.saucedemo.com/
 
 toGecerliEmail = wise@gmail.com
 toGecerliPassword = 12345
