--- a/configuration.properties
+++ b/configuration.properties
@@ -5,6 +5,7 @@ toUrl = https://www.testotomasyonu.com
 zeroUrl = http://zero.webappsecurity.com/
 faceUrl = https://www.facebook.com
 saucedemoUrl = https://www.saucedemo.com/
+heroUrl = https://the-internet.herokuapp.com/add_remove_elements/
 
 toGecerliEmail = wise@gmail.com
 toGecerliPassword = 12345
