--- a/configuration.properties
+++ b/configuration.properties
@@ -6,6 +6,7 @@ zeroUrl = http://zero.webappsecurity.com/
 faceUrl = https://www.facebook.com
 saucedemoUrl = https://www.saucedemo.com/
 heroUrl = https://the-internet.herokuapp.com/add_remove_elements/
+demoqaUrl = https://demoqa.com/browser-windows
 
 toGecerliEmail = wise@gmail.com
 toGecerliPassword = 12345
