--- a/configuration.properties
+++ b/configuration.properties
@@ -7,6 +7,7 @@ faceUrl = https://www.facebook.com
 saucedemoUrl = https://www.saucedemo.com/
 heroUrl = https://the-internet.herokuapp.com/add_remove_elements/
 demoqaUrl = https://demoqa.com/browser-windows
+emagUrl = https://www.emag.bg/
 
 toGecerliEmail = wise@gmail.com
 toGecerliPassword = 12345
