--- a/configuration.properties
+++ b/configuration.properties
@@ -8,6 +8,7 @@ saucedemoUrl = https://www.saucedemo.com/
 heroUrl = https://the-internet.herokuapp.com/add_remove_elements/
 demoqaUrl = https://demoqa.com/browser-windows
 emagUrl = https://www.emag.bg/
+guru99Url = http://demo.guru99.com/test/web-table-element.php 
 
 toGecerliEmail = wise@gmail.com
 toGecerliPassword = 12345
